# miniplc0-compiler

./: .gitignore  CMakeLists.txt  READEME.md  README.md  fmts.hpp  judge.toml  main.cpp
analyser/: anal_expr.cpp  anal_func.cpp  anal_prog.cpp  anal_stat.cpp  analyser.cpp  analyser.h  expression.cpp  function.cpp  item.h  program.cpp  statement.cpp  symbol.cpp  symbol.h  utils.cpp  utils.h
ast/: ast.cpp  ast.h  expr_node.h  func_node.h  item.h  node.h  prog_node.h  stat_node.h
error/: error.cpp  error.h
generator/: gen_expr.cpp  gen_func.cpp  gen_prog.cpp  gen_stat.cpp  generator.cpp  generator.h
instruction/: instruction.cpp  instruction.h
symbol/: stand_library.cpp  symbol_table.cpp  symbol_table.h  symbol_table_stack.cpp  symbol_table_stack.h  type.h
tests/: test_tokenizer.cpp
tokenizer/: token.cpp  token.h  tokenizer.cpp  tokenizer.h
utils/: utils.cpp  utils.h
